crates/monitrs-tui/tests/snapshots/overlay_snapshots__signal_menu_ascii.snap
---
source: crates/monitrs-tui/tests/overlay_snapshots.rs
expression: text_of(&buffer)
---
|                                                                                                        |
|                                                                                                        |
|                                                                                                        |
|                                                                                                        |
|                                                                                                        |
|+ CONFIRM ---------------------------------------------------------------------------------------------+|
||NAME          rustc                                                                                   ||
||PID           31842                                                                                   ||
||IDENTITY      pid 31842 start key 900100                                                              ||
||USER            gabor                                                                                 ||
||STATE         sleeping                                                                                ||
||STARTED         1970-01-01 00:00:00 UTC                                                               ||
||AGE             01:20                                                                                 ||
||THREADS         4                                                                                     ||
||COMMAND       cargo build --release                                                                   ||
||------------------------------------------------------------------------------------------------------||
||CHOOSE A SIGNAL                                                                                       ||
||> SIGTERM  signal 15  asks the process to exit; it may clean up first, or ignore the request          ||
||  SIGINT   signal 2   interrupts the process, as Ctrl-C in its own terminal would                     ||
||  SIGHUP   signal 1   reports a hang-up; many services reload their configuration instead             ||
||  SIGKILL  signal 9   X forceful terminates the process immediately, with no cleanup and no unsaved...||
||                                                                                                      ||
||j / k move the choice; nothing is sent until it is confirmed                                          ||
||Enter review   Esc cancel                                                                             ||
|+------------------------------------------------------------------------------------------------------+|
|                                                                                                        |
|                                                                                                        |
|                                                                                                        |
|                                                                                                        |
|                                                                                                        |
