crates/monitrs-tui/tests/snapshots/overlay_snapshots__sort_selector_ascii.snap
---
source: crates/monitrs-tui/tests/overlay_snapshots.rs
expression: text_of(&buffer)
---
|                                                                                                        |
|                                                                                                        |
|                                                                                                        |
|                    + SORT ---------------------------------- CPU%, descending ---+                     |
|                    |> CPU%              active, descending                       |                     |
|                    |  memory (RSS)                                               |                     |
|                    |  name                                                       |                     |
|                    |  PID                                                        |                     |
|                    |  user                                                       |                     |
|                    |  state                                                      |                     |
|                    |  read rate                                                  |                     |
|                    |  write rate                                                 |                     |
|                    |  age                                                        |                     |
|                    |  threads                                                    |                     |
|                    |  virtual memory                                             |                     |
|                    |Enter sort by the highlighted column   S reverse   Esc cancel|                     |
|                    +-------------------------------------------------------------+                     |
|                                                                                                        |
|                                                                                                        |
|                                                                                                        |
