crates/monitrs-tui/tests/snapshots/overlay_snapshots__sort_selector_unicode.snap
---
source: crates/monitrs-tui/tests/overlay_snapshots.rs
expression: text_of(&buffer)
---
|                                                                                                        |
|                                                                                                        |
|                                                                                                        |
|                    ┌ SORT ─────────────────────────── memory (RSS), ascending ───┐                     |
|                    │  CPU%                                                       │                     |
|                    │  memory (RSS)      active, ascending                        │                     |
|                    │  name                                                       │                     |
|                    │▸ PID                                                        │                     |
|                    │  user                                                       │                     |
|                    │  state                                                      │                     |
|                    │  read rate                                                  │                     |
|                    │  write rate                                                 │                     |
|                    │  age                                                        │                     |
|                    │  threads                                                    │                     |
|                    │  virtual memory                                             │                     |
|                    │Enter sort by the highlighted column   S reverse   Esc cancel│                     |
|                    └─────────────────────────────────────────────────────────────┘                     |
|                                                                                                        |
|                                                                                                        |
|                                                                                                        |
